# GalleryTEC

./: README.md
GalleryTEC/: CMakeLists.txt  RAID5.cpp  RAID5.h  converter.cpp  converter.h  hencoder.cpp  hencoder.h  main.cpp
GalleryTEC/Raids/: Raid.cpp  Raid.h
